add dashboard information

--- a/views/admin/_partial/widget/nav.ejs
+++ b/views/admin/_partial/widget/nav.ejs
@@ -2,6 +2,9 @@
 
 <ul class="pure-menu-list">
     <li class="pure-menu-item">
+        <a class="pure-menu-link" href='<%= site.url_for('admin') %>'><%= __('Dashboard') %></a>
+    </li>
+    <li class="pure-menu-item">
         <a class="pure-menu-link" href='<%= site.url_for('admin/announcement') %>'><%= __('Announcement') %></a>
     </li>
     <li class="pure-menu-item">
