--- a/views/admin/_partial/dashboard.ejs
+++ b/views/admin/_partial/dashboard.ejs
@@ -4,6 +4,111 @@
 </div>
 <div class="content">
 	<%- include('../_partial/widget/nav')%>
-	<h2><%= __('Notice') %></h2>
+	<h2><%= __('Status') %></h2>
+	<div class="pure-g">
+		<div class="pure-u-1-1">
+			<h3><%= __('Problem Set') %></h3>
+			<div class="content">
+				<p>分別為已建立的最大題號</p>
+			</div>
+			<div class="pure-g pricing-tables">
+				<div class="pure-u-1-3">
+					<div class="pricing-table pricing-table-enterprise">
+					    <div class="pricing-table-header">
+					        <h2>Practice PID</h2>
+					        <span class="pricing-table-price">
+					            <%- system_status.practice %>
+					        </span>
+					    </div>
+					</div>
+				</div>
+				<div class="pure-u-1-3">
+					<div class="pricing-table pricing-table-enterprise">
+					    <div class="pricing-table-header">
+					        <h2>Exam PID</h2>
+					        <span class="pricing-table-price">
+					        	<%- system_status.contest %>
+					        </span>
+					    </div>
+					</div>
+				</div>
+				<div class="pure-u-1-3">
+					<div class="pricing-table pricing-table-enterprise">
+					    <div class="pricing-table-header">
+					        <h2>Release PID</h2>
+					        <span class="pricing-table-price">
+					            <%- system_status.release %>
+					        </span>
+					    </div>
+					</div>
+				</div>
+				<div class="pure-u-1 pure-u-md-1-1">
+					<ul class="pricing-table-list">
+					</ui>
+				</div>
+			</div>
+		</div>
+		<div class="pure-u-1-1">
+			<h3><%= __('Exam') %></h3>
+			<div class="content">
+				<p>目前系統登記分數最大編號</p>
+			</div>
+			<div class="pure-g pricing-tables">
+				<div class="pure-u-1-1">
+					<div class="pricing-table pricing-table-enterprise">
+					    <div class="pricing-table-header">
+					        <h2>Exam EID</h2>
+					        <span class="pricing-table-price">
+					            <%- system_status.examid-1 %>
+					        </span>
+					    </div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="pure-u-1-1">
+			<h3><%= __('Account') %></h3>
+			<div class="content">
+				<p>人數統計</p>
+			</div>
+			<div class="pure-g pricing-tables">
+				<div class="pure-u-1-3">
+					<div class="pricing-table pricing-table-enterprise">
+					    <div class="pricing-table-header">
+					        <h2>Administrator</h2>
+					        <span class="pricing-table-price">
+					            <%- system_status.account.admin %>
+					        </span>
+					    </div>
+					</div>
+				</div>
+				<div class="pure-u-1-3">
+					<div class="pricing-table pricing-table-enterprise">
+					    <div class="pricing-table-header">
+					        <h2>Class 1 + Class 2</h2>
+					        <span class="pricing-table-price">
+					        	<%- system_status.account.student %>
+					        </span>
+					    </div>
+					</div>
+				</div>
+				<div class="pure-u-1-3">
+					<div class="pricing-table pricing-table-enterprise">
+					    <div class="pricing-table-header">
+					        <h2>Total</h2>
+					        <span class="pricing-table-price">
+					            <%- system_status.account.total %>
+					        </span>
+					    </div>
+					</div>
+				</div>
+				<div class="pure-u-1 pure-u-md-1-1">
+					<ul class="pricing-table-list">
+					</ui>
+				</div>
+			</div>
+		</div>
+	</div>
+	<h2><%= __('Note') %></h2>
 	<p>測資上傳仍未實作，請手動部屬檔案</p>
 </div>
