Fixed the editor CodeMirror and tab height

--- a/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
@@ -751,7 +751,7 @@ abbr[title] {
   float: left;
   width: 25%;
   color: white;
-
+  padding: 10px 0px;
   background: #343434;
   cursor: pointer;
   text-decoration: none;
