Fixed upload file error

--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -148,7 +148,7 @@
 					</div>
 
 					<div class="pure-u-3-4">
-							<input class="pure-input-1-2" name="paste_code<%- i %>" id="code<%- i %>" type="file">
+							<input class="pure-input-1-2" name="code<%- i %>" id="code<%- i %>" type="file">
 							<span class="pure-button upload-switch-button" style="background: none;" data-id="paste_code_block<%- i %>" data-file-id="code<%- i %>" data-show="false">
 								<i class="fa fa-angle-down" aria-hidden="true"> or paste your code ...</i>
 							</span>
