--- a/views/admin/_partial/account.ejs
+++ b/views/admin/_partial/account.ejs
@@ -16,13 +16,25 @@
 
 <div class="content">
 	<%- include('../_partial/widget/nav')%>
+
+	<div class="pure-g">
+		<div class="pure-u-1">
+			<form class="pure-form" style="position: relative">
+				<label for="search" style="position: absolute; left: 12px; top: -2px">
+					<i class="fa fa-search"></i> 
+				</label>
+				<input id="search" class="pure-input-rounded pure-input-1" placeholder="Search Username" style="padding-left: 36px; margin: 2px" type="text">
+			</form>
+		</div>
+	</div>
+
 	<div class="pure-g">
 		<div class="pure-u-1-3">
 			<a class="pure-button pure-button-primary" class="pure-u-1-1" href="<%= site.url_for('admin/new/account') %>">+ <%= __('New Account') %></a>
 		</div>
 	</div>
 
-	<table class="pure-table pure-table-bordered account-table" style="width: 100%">
+	<table class="pure-table pure-table-bordered account-table" id="account-table">
 		<thead>
 		    <tr>
 		    	<th>#</th>
@@ -33,7 +45,7 @@
 				<th></th>
 			</tr>
 		</thead>
-		<tbody>
+		<tbody id="account-table-rows">
 			<% for (row in account_list) { %>
 				<% var acc = account_list[row]; %>
 			<tr>
@@ -69,4 +81,14 @@ for (var i = 0; i < list.length; i++) {
 		if(!answer){ event.preventDefault(); }
 	});
 }
+
+var $rows = $('#account-table-rows > tr');
+$('#search').keyup(function() {
+    var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+    
+    $rows.show().filter(function() {
+        var text = $(this).text().replace(/\s+/g, ' ').toLowerCase();
+        return !~text.indexOf(val);
+    }).hide();
+});
 </script>
