--- a/views/admin/_partial/problems.ejs
+++ b/views/admin/_partial/problems.ejs
@@ -4,6 +4,18 @@
 </div>
 <div class="content">
 	<%- include('../_partial/widget/nav')%>
+
+	<div class="pure-g">
+		<div class="pure-u-1">
+			<form class="pure-form" style="position: relative">
+				<label for="search" style="position: absolute; left: 12px; top: -2px">
+					<i class="fa fa-search"></i> 
+				</label>
+				<input id="search" class="pure-input-rounded pure-input-1" placeholder="Search Problems, like :public, :private" style="padding-left: 36px; margin: 2px" type="text">
+			</form>
+		</div>
+	</div>
+
 	<div class="pure-g">
 		<div class="pure-u-1-3">
 			<a class="pure-button pure-button-primary" class="pure-u-1-1" href="<%= site.url_for('admin/new/problem') %>">+ <%= __('New Problem') %></a>
@@ -29,6 +41,7 @@
 					<% } else { %>
 						<i class="fa fa-eye-slash"></i>
 					<% } %>
+					<span style="display:none;">:<%= prob.pub ? "public" : "private" %></span>
 				</td>
 				<td><%- prob.pid %></td>
 				<td><a href="<%= site.url_for('problem/0/' + prob.pid) %>"><%- prob.ttl %></a></td>
@@ -76,3 +89,15 @@ for (var i = 0; i < list.length; i++) {
         false);
 }
 </script>	
+
+<script>
+var $rows = $('tbody > tr');
+$('#search').keyup(function() {
+    var val = $.trim($(this).val()).replace(/ +/g, ' ').toLowerCase();
+    
+    $rows.show().filter(function() {
+        var text = $(this).text().replace(/\s+/g, ' ').toLowerCase();
+        return !~text.indexOf(val);
+    }).hide();
+});
+</script>
