--- a/views/_partial/after-footer.ejs
+++ b/views/_partial/after-footer.ejs
@@ -80,4 +80,28 @@
 </script>
 
 
+<link rel="stylesheet" href="<%= site.url_for('javascripts/fancybox/jquery.fancybox.css') %>">
+<script src="<%= site.url_for('javascripts/fancybox/jquery.fancybox.js') %>"></script>
 
+<script>
+  // Caption
+  $('.content').each(function(i) {
+    $(this).find('img').each(function() {
+      if ($(this).parent().hasClass('fancybox')) return;
+
+      var alt = this.alt;
+
+      // if (alt) $(this).after('<span class="caption">' + alt + '</span>');
+
+      $(this).wrap('<a href="' + this.src + '" data-fancybox="group" data-caption="' + alt + '" class="fancybox"></a>');
+    });
+
+    $(this).find('.fancybox').each(function() {
+      $(this).attr('rel', 'article' + i);
+    });
+  });
+
+  if ($.fancybox) {
+    $('.fancybox').fancybox({});
+  }
+</script>
