--- a/views/_partial/_problem/problem-domain.ejs
+++ b/views/_partial/_problem/problem-domain.ejs
@@ -74,7 +74,7 @@
 	<div class="pure-u-1 pure-u-lg-1-24">
 	</div>
 	<div class="pure-u-1 pure-u-lg-17-24">
-		<h3 data-step="12" data-intro="相應題目清單，<i class='fa fa-thumbs-o-up' aria-hidden='true'></i> 表示優先推薦、<i class='fa fa-check' style='color: green;'></i> 表示此題通過、<i class='fa fa-bug' style='color: red;'></i> 表示嘗試仍錯誤"><%= __('Problem List') %></h3>
+		<h3 data-step="12" data-intro="相應每周的題目清單，<i class='fa fa-thumbs-o-up' aria-hidden='true'></i> 表示推薦題目、<i class='fa fa-check' style='color: green;'></i> 表示此題通過、<i class='fa fa-bug' style='color: red;'></i> 表示嘗試仍錯誤、<i class='fa fa-lock' aria-hidden='true'></i> 表示較不推薦"><%= __('Problem List') %></h3>
 		<div class="pure-u-1-1" id="level-content">
 		</div>
 	</div>
