--- a/views/_partial/_widget/submission_table.ejs
+++ b/views/_partial/_widget/submission_table.ejs
@@ -27,7 +27,7 @@
 				<th></th>
 				<th>Problem</th>
 				<th>User</th>
-				<th>Verdict</th>
+				<th data-step="18" data-intro="<h3>檢測結果大致上分成以下幾種</h3> <ul style='font-family: verdana; '><li><span style='color: #00AA00;'>AC</span> (Accepted):<br/> 表示通過所有測試資料。</li><li><span style='color:#AAAA00;'>CE</span> (Compile Error):<br/> 表示編譯錯誤，並在訊息中列出完整錯誤訊息。</li> <li><span style='color:#FF0000;'>WA</span> (Wrong Answer): <br/>表示部份答案錯誤。</li><li><span style='color: #0000FF;'>TLE</span> (Time Limit Exceed): <br/>表示執行超過時間限制。</li><li>MLE (Memory Limit Exceed): <br/>表示執行超過記憶體限制。</li><li>OLE (Output Limit Exceed): <br/>表示輸出檔案超過限制大小。</li><li><span style='color: #00AAAA;'>RE</span> (Runtime Error): <br/>表示執行時發生錯誤。</li><li><span style='color: #00AAAA;'>PE</span> (Presentation Error): <br/>在特定題目中，允許部分格式給分。</li><ul>">Verdict</th>
 				<th></th>
 				<th class='codelen-header'>Len</th>
 				<th class='date-header'>Date</th>
