--- a/views/_partial/archive.ejs
+++ b/views/_partial/archive.ejs
@@ -6,7 +6,7 @@
 <div class="pure-g">
 	<div class="pure-u-1">
 		<div class="content">
-			<a id="startButton" class="pure-button pure-button-primary" href="javascript:void(0);"><i class="fa fa-bus" aria-hidden="true"></i> Show Me How to Use Judge Girl System</a>
+			<a id="startButton" class="pure-button" href="javascript:void(0);"><i class="fa fa-question-circle" aria-hidden="true"></i> User Guide</a>
 		</div>
 	</div>
 	<div class="pure-u-1">
