--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -39,7 +39,7 @@
 
 <div class="pure-menu pure-menu-horizontal">
 
-<ul class="pure-menu-list" data-step="13" data-intro="可查閱個人提交紀錄、整體、統計結果、參考解答">
+<ul class="pure-menu-list" data-step="13" data-intro="調閱此題的 <b>個人提交紀錄</b>、<b>整體狀態</b>、<b>統計結果</b>、<b>參考解答</b>">
 <% if (user["uid"]) { %>
 	<li class="pure-menu-item"><a class="pure-menu-link" href='<%= site.url_for('submissions?pid=' + pid + '&uid='+ uid) %>'><%= __('My Status') %></a></li>
 <% } %>
@@ -54,12 +54,12 @@
 
 </div>
 
-<div data-step="14" data-intro="題目中 <i class='fa fa-clipboard'></i> 可協助你複製到剪貼簿，特殊格式的範例輸入/輸出測資不適用，請特別小心">
+<div data-step="14" data-intro="<p>描述中 <i class='fa fa-clipboard'></i> 按鈕可協助你複製到剪貼簿，並貼到本機實驗。</p> <p>若題目有特殊的字元格式，那在範例輸入/輸出測資不適用複製貼上，請務必小心</p>">
 <%- problem_content %>
 </div>
 
 <div class="pure-g">
-	<div class="pure-u-1 pure-u-lg-1" data-step="15" data-intro="請在登入後，進行程式碼提交。你可以選擇上傳檔案 (推薦) 或者貼程式碼到指定區塊 (F11 全螢幕編輯、ESC 退出)">
+	<div class="pure-u-1 pure-u-lg-1" data-step="15" data-intro="<p>請在登入 <i class='fa fa-sign-in'></i> 後，進行程式碼提交。</p> 可以選擇上傳程式<b>原始碼</b>檔案 (建議使用，不易發生錯誤) 或 貼上程式碼至文字區塊 (<kbd>F11</kbd> 全螢幕編輯、<kbd>Esc</kbd> 退出全螢幕)">
 	<h2 class="content-subhead">Submit</h2>
 <% if (canSubmit) { %>
 	<form class="pure-form" action="<%= site.url_for('submit') %>" method="post" enctype="multipart/form-data" id="submit_form">
@@ -226,7 +226,7 @@
 	<a class="button-success pure-button" href="<%= site.url_for('login') %>"><i class="fa fa-sign-in"></i> <%= __('Login') %></a>
 <% } %>
 	</div>
-	<div class="pure-u-1 pure-u-lg-1" data-step="16" data-intro="每一筆的測資的運行時間、空間限制。部分題目提供測試資料下載，若尚未公布，請詢問助教是否可公布測試資料。">
+	<div class="pure-u-1 pure-u-lg-1" data-step="16" data-intro="每一筆測資的<b>運行時間</b>、<b>空間大小限制</b>。部分題目提供測試資料下載，若尚未公布，請向助教詢問是否可公布測試資料。">
 		<h2 class="content-subhead">Testdata Set</h2>
 		<a href="<%= site.url_for('testdata/download/' + pid) %>"><i class="fa fa-download"></i> Download Testdata</a>
     	<div class="pure-menu">
