--- a/views/_partial/_user/forbidden.ejs
+++ b/views/_partial/_user/forbidden.ejs
@@ -2,7 +2,7 @@
 	<h1>Forbidden Page</h1>
 	<h2>If you have any problem, please contact TA.</h2>
 </div>
-<div>
+<div class="content">
 <% if (sysmsg && sysmsg.length > 0) { %>
 	<div class='sysmsg'><%- sysmsg %></div>
 <% } %>
